# halloween

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: theme.css
templates/: admin_import.html  base.html  home.html  rankings.html  upload.html  vote.html  vote_login.html
