[project]
name = "halloween"
version = "0.1.0"
description = ""
authors = [
    {name = "pocafup",email = "pocafup@pocafupdeMacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (==3.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
